more assets, removing javascript, making this basic.

--- a/assets/style.css
+++ b/assets/style.css
@@ -49,6 +49,8 @@ nav {
 	background-image: url(images/Inpersonimpersonator.JPG);
 }
 
+
+
 .extroverter {
 
 }
@@ -58,7 +60,7 @@ nav {
 }
 
 .glasses {
-
+	background-image: url(images/glasses.JPG);
 }
 
 .time-zone-equalizer {
