--- a/assets/style.css
+++ b/assets/style.css
@@ -28,8 +28,8 @@ nav {
 	margin: 10px;
 	display: flex;
 	flex-grow: 1;
-	height: 200px;
-    width: 200px;
+	height: 250px;
+    width: 250px;
 	float: left;
 	border: 2px solid black;
 	border-radius: 5px;
@@ -37,7 +37,7 @@ nav {
 }
 
 .container li:hover {
-	border: 3px solid #AE76F8;
+	border: 4px solid #AE76F8;
 }
 
 .container p {
@@ -49,10 +49,8 @@ nav {
 	background-image: url(images/Inpersonimpersonator.JPG);
 }
 
-
-
 .extroverter {
-
+	background-image: url(images/extroverter.JPG);
 }
 
 .playback-ring {
@@ -64,7 +62,7 @@ nav {
 }
 
 .time-zone-equalizer {
-
+	background-image: url(images/tzequalizer.JPG);
 }
 
 .translator {
