--- a/assets/style.css
+++ b/assets/style.css
@@ -62,7 +62,7 @@ nav {
 }
 
 .time-zone-equalizer {
-	background-image: url(images/tzequalizer.JPG);
+	background-image: url(images/timezone.JPG);
 }
 
 .translator {
