--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,6 @@
+body {
+	background-color: #ED96C8;
+}
 .donut-logo {
 	height: 40px;
 	width: 40px;
@@ -67,4 +70,14 @@ nav {
 
 .translator {
 	background-image: url(images/translator.jpg);
+}
+
+footer {
+	border-top: 2px solid #AE76F8;
+	background-color: #B0B0B0;
+	position: absolute;
+    bottom: 0;
+    width: 100%;
+	height: 60px;
+	line-height: 39px;
 }
