--- a/assets/style.css
+++ b/assets/style.css
@@ -73,8 +73,8 @@ nav {
 }
 
 footer {
-	border-top: 2px solid #AE76F8;
-	background-color: #B0B0B0;
+	border-top: 2px solid #BEBEBE;
+	background-color: #AE76F8;
 	position: absolute;
     bottom: 0;
     width: 100%;
