--- a/assets/style.css
+++ b/assets/style.css
@@ -75,7 +75,7 @@ nav {
 footer {
 	border-top: 2px solid #BEBEBE;
 	background-color: #AE76F8;
-	position: absolute;
+	position: fixed;
     bottom: 0;
     width: 100%;
 	height: 60px;
