fixing img src urls

--- a/assets/style.css
+++ b/assets/style.css
@@ -53,7 +53,7 @@ nav {
 }
 
 .extroverter {
-	background-image: url(images/extroverter.JPG);
+	background-image: url(images/extroverter.jpg);
 }
 
 .playback-ring {
@@ -61,11 +61,11 @@ nav {
 }
 
 .glasses {
-	background-image: url(images/glasses.JPG);
+	background-image: url(images/glasses.jpg);
 }
 
 .time-zone-equalizer {
-	background-image: url(images/timezone.JPG);
+	background-image: url(images/timezone.jpg);
 }
 
 .translator {
